# browser-use

./: Dockerfile.api  docker-compose.yml
api/: .gitignore  app.py  config.py  main.py  pyproject.toml  routers.py  run_api.sh
api/middleware/: __init__.py  auth.py
api/models/: __init__.py  job.py
api/routers/: __init__.py  jobs.py
api/services/: __init__.py  agent_service.py  job_service.py
