[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use",
    "fastapi>=0.121.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
browser-use = { workspace = true }

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "mypy>=1.18.2",
]
